Update line height to match grid item and fix z-index for restricted

--- a/birch-artifact-grid-item-preview.css
+++ b/birch-artifact-grid-item-preview.css
@@ -84,6 +84,7 @@
   color: #A51F1F;
   padding: 5px 5px 5px 25px;
   border-radius: 4px;
+  line-height: 1;
 }
 
 .error-text strong {
